# MyDevelopment

./: .gitignore  Advanced_tutorial.md  BASELINE_FRAMEWORK.json  Beginner_tutorial.md  CONTRIBUTING.md  Context_Module_Manual.md  Dockerfile  ENHANCED_ARCHITECTURE.md  EXERCISE_10_COMPLETION_REPORT.md  EXERCISE_11_PHASE_B_COMPLETION_REPORT.md  EXERCISE_11_PHASE_C_COMPLETION_REPORT.md  FRAMEWORK0_CAPSTONE_COMPLETION_REPORT.md  FRAMEWORK_ENHANCEMENT_PLAN.json  Intermediate_tutorial.md  Mastery_tutorial.md  QUIZ_DASHBOARD.md  README.md  README_backup.md  Runner_Module_Manual.md  Untitled.ipynb  WORKSPACE_RESTRUCTURING_PLAN.json  advanced_config.json  auto_fixer_results.txt  cleanup.py  cli_demo.py  config.py  configuration_demo.py  current_compliance_issues.txt  current_full_compliance_status.txt  current_full_lint_check.txt  current_lint_check.txt  current_lint_issues.txt  current_lint_status.txt  current_status.txt  debug_lines.py  demo_full_integration.md  demo_full_integration.py  demo_tmux_command_logging.py  docker-compose.yml  error_handling_copy.txt  (+60 more)
--help/: .gitignore  cleanup_report.json  pyproject.toml
--help/examples/: basic_usage.py
.github/: copilot-instructions.md  pull_request_template.md
FYI/: EXERCISE_7_COMPLETION_REPORT.py  EXERCISE_8_PHASE_1_COMPLETION_REPORT.py  beginner_guide.md  exercise_1.md  exercise_10.md  exercise_11.md  exercise_12.md  exercise_2.md  exercise_3.md  exercise_4.md  exercise_5a.md  exercise_5b.md  exercise_5c.md  exercise_5d.md  exercise_6.md  exercise_7.md  exercise_7_demo.py  exercise_8.md  exercise_8_demo.py  exercise_8_phase_2_demo.py  exercise_9.md  exercise_9_phase_1_demo.py
analysis/: __init__.py  charting.py  excel_processor.py  exporter.py  summarizer.py
capstone/: EXERCISE_10_PLUGIN_ECOSYSTEM_COMPLETION_REPORT.md  PRODUCTION_PLATFORM_COMPLETION_REPORT.md  README.md  capstone_integration.py  phase_2_demo.py  phase_3_demo.py  phase_4_demo.py  phase_5_demo.py  phase_6_demo.py  phase_6_results.json  phase_7_demo.py  phase_7_results.json  phase_8_demo.py  phase_8_results.json
cli/: __init__.py  excel_automation.py  main.py
context_exercises/: CONTEXT_MASTER_CERTIFICATION.md  context_exercise.md   exercise_6_example.py  exercise_7_example.py  exercise_8_master_challenge.py
data/: 2025-09-23-AccountStatement_a.csv  2025-09-23-AccountStatement_indi.csv  2025-09-23-AccountStatement_o.csv  overall_accounts.xlsm  overview.csv  processed_options.csv
(+780 files in other folders)
