# pyproject.toml
# Framework0 - A robust and flexible Python framework.
#
# This configuration file adheres to PEP 518 and PEP 621 standards,
# defining build system requirements, project metadata, dependencies,
# and tool configurations for the Framework0 project.
#
# Sections:
# - [build-system]: Specifies the build system and its requirements.
# - [project]: Defines project metadata, dependencies, and optional dependencies.
# - [tool]: Configurations for various tools used in the project.

# Build system requirements
[build-system]
requires = ["setuptools>=75.3.0", "wheel", "pytest-runner"]
build-backend = "setuptools.build_meta"

# Project metadata and dependencies
[project]
name = "framework0"
version = "0.1.0"
description = "A robust and flexible Python framework."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]
maintainers = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0"
]
optional-dependencies = {dev = ["pytest>=6.2.0", "flake8>=3.9.0", "black>=21.6b0"]}

# Tool configurations
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line-length = 88
known_third_party = ["requests", "numpy", "pandas"]

[tool.pytest.ini_options]
addopts = ["--maxfail=3", "--disable-warnings", "--strict-markers"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["framework0"]

[tool.coverage.report]
show_missing = true
skip_covered = true
