[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iaf0-framework"
version = "0.1.0"
description = "Integrated Analysis Framework (IAF0) - Modular Python Automation"
authors = [
    {name = "IAF0 Team"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "joblib>=1.3.0",
    "black>=23.0.0"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--disable-warnings -q"
